--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,8 +4,22 @@
     <string name="app_name">Ftp Client</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
     
+	<string name="login">Login to server</string>
+    <string name="ip">Ip</string>
+    <string name="port">Port</string>
+    <string name="user">Username</string>
+    <string name="pass">Password</string>
+    <string name="save_info">Save info</string>
+    
+    <string name="get_Content">Get Content</string>
+    <string name="upload">Upload file to ftp</string>
+    <string name="disconnect">Disconnect</string>
+    
+    
+	
+	
+	
     <string-array name="connection_protocol_array">
         <item>FTP - File Transfer Protocol</item>
         <item>SFTP - SSH File Transfer Protocol</item>
