--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="m_open">Open</string>
     <string name="m_rename">Rename</string>
     <string name="m_delete">Delete</string>
+    <string name="m_cancel">Cancel</string>
 
     <string-array name="connection_protocol_array">
         <item>FTP - File Transfer Protocol</item>
